<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_btn">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="app_name">Somato</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_hint">Email</string>
    <string name="login">Enter your username and password:</string>
    <string name="submit">Enter</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register >></string>
    <string name="title_activity_edit_card">EditCardActivity</string>
    <string name="linkedin">www.linkedin.com/you</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="job_description">Job Description</string>
    <string name="phone">Phone</string>
    <string name="title_activity_select_share">SelectShare</string>
    <string name="title_activity_view_card">ViewCardActivity</string>
    <string name="title_activity_receive_card">ReceiveCardActivity</string>

</resources>
