<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<ImageView
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:src="@drawable/background" />

<EditText
    android:id="@+id/UserField"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/PasswordField"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:hint="@string/user_hint" >


</EditText>

<EditText
    android:id="@+id/PasswordField"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/background"
    android:layout_alignLeft="@+id/UserField"
    android:layout_alignRight="@+id/UserField"
    android:layout_marginBottom="62dp"
    android:hint="@string/password"
    android:ems="10"
    android:inputType="textPassword" />

<ImageView
    android:id="@+id/somatoText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/UserField"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="24dp"
    android:src="@drawable/somatoBig" />

<Button
    android:id="@+id/enter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/background"
    android:layout_alignLeft="@+id/PasswordField"
    android:layout_alignRight="@+id/PasswordField"
    android:layout_marginBottom="14dp"
    android:text="@string/submit" />

<TextView
    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@+id/background"
    android:layout_centerHorizontal="true"
    android:text="@string/register"
    android:textColor="#d6382c" />

</RelativeLayout>
