<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >
    
    <ImageView
	    android:id="@+id/background"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:src="@drawable/background" />

	<EditText
	    android:id="@+id/FirstNameField"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/LastNameField"
	    android:layout_alignRight="@+id/UserField"
	    android:layout_below="@+id/UserField"
	    android:ems="8"
	    android:hint="@string/first_name" />

	<EditText
	    android:id="@+id/LastNameField"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/PasswordField"
	    android:layout_alignRight="@+id/PasswordField"
	    android:layout_below="@+id/FirstNameField"
	    android:ems="8"
	    android:hint="@string/last_name" />

	<EditText
	    android:id="@+id/PasswordField"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/UserField"
	    android:layout_alignRight="@+id/UserField"
	    android:layout_below="@+id/LastNameField"
	    android:ems="8"
	    android:hint="@string/password"
	    android:inputType="textPassword" />

	<ImageView
	    android:id="@+id/somatoText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:src="@drawable/somato_big" />

	<EditText
	    android:id="@+id/UserField"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/somatoText"
	    android:layout_alignRight="@+id/somatoText"
	    android:layout_below="@+id/somatoText"
	    android:layout_marginTop="23dp"
	    android:ems="8"
	    android:hint="Email Address" >

	    <requestFocus />
	</EditText>

	<Button
	    android:id="@+id/enter"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/background"
	    android:layout_alignLeft="@+id/PasswordField"
	    android:layout_alignRight="@+id/PasswordField"
	    android:onClick="register"
	    android:text="@string/submit" />
	
</RelativeLayout>
