<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCardActivity" 
    android:orientation="vertical">
    

         <ImageView
             android:id="@+id/somatoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:src="@drawable/somato_big" />

         <ImageView
		    android:id="@+id/background"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:src="@drawable/background" />

         <EditText
             android:id="@+id/linkedin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/somatoText"
             android:layout_marginTop="18dp"
             android:ems="8"
             android:hint="@string/linkedin" />

         <EditText
             android:id="@+id/website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/phone"
             android:ems="8"
             android:hint="@string/website" />

         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/website"
             android:ems="8"
             android:hint="@string/email" />

             <RadioGroup
                 android:id="@+id/buttons"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/background"
                 android:orientation="horizontal" >

                 <TextView
                     android:id="@+id/theme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Themes:"
                     android:textColor="#d6382c" />

                 <RadioButton
                     android:id="@+id/somatotheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/email"
                     android:layout_marginLeft="5dp"
                     android:layout_toLeftOf="@+id/somatoText"
                     android:layout_weight="1"
                     android:background="@drawable/somato_radio" />
                 
                 
             <RadioButton
                 android:id="@+id/blacktheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/background"
                 android:layout_marginLeft="14dp"
                 android:layout_toRightOf="@+id/buttons"
                 android:background="@drawable/black_radio" />
             </RadioGroup>

             <EditText
                 android:id="@+id/JobDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/linkedin"
                 android:ems="8"
                 android:hint="@string/job_description" />

             <EditText
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/JobDescription"
                 android:ems="8"
                 android:hint="@string/phone" />

             <TextView
                 android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/buttons"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="32dp"
                 android:clickable="true"
                 android:onClick="updateForm"
                 android:text="@string/submit"
                 android:textColor="#d6382c"
                 android:textSize="35dp" />
	    
</RelativeLayout>

